<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Drawer menu-->
    <string name="drawer_your_lunch">YOUR LUNCH</string>
    <string name="drawer_setting">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- fb login -->
    <string name="facebook_application_id" translatable="false">460021055576210</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb460021055576210</string>

    <!-- LOGIN -->
    <string name="catch_phrase">Find a nice restaurant and invite your co-worker for lunch!</string>
    <string name="connect_text_google">Sign in with Google</string>
    <string name="connect_text_facebook">Sign in with Facebook</string>

    <!--Bottom navigation menu-->
    <string name="menu_map_view">Map View</string>
    <string name="menu_list_view">List View</string>
    <string name="menu_workmates">Workmates</string>

    <!--fab description-->
    <string name="connection_succeed">connection is successful</string>
    <string name="search_text">search</string>

    <string name="error_authentication_canceled" translatable="false">error authentication canceled</string>
    <string name="error_no_internet" translatable="false">error no internet</string>
    <string name="error_unknown_error" translatable="false">unknown error</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="content_description" translatable="false">CHAT</string>

    <!--item restaurant-->
    <string name="name_not_found">Name not found</string>
    <string name="address_not_found">Address not found</string>
    <string name="isOpen">Open</string>
    <string name="isClose">Close</string>
    <string name="Not_specified">Not specified</string>

    <string name="workmates_by_default" translatable="false">()</string>

    <!--item workmate-->
    <string name="have_chosen">have chosen</string>
    <string name="has_not_decided_yet">&#160;has not decided yet</string>
    <string name="is_joining">&#160;is joining</string>

    <string name="populate_tv_user" translatable="false">&#160;%1s (%2s)</string>

    <!--details restaurant-->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="autocomplete_hint">Search restaurants</string>
    <string name="sort_by_distance">By distance</string>
    <string name="sort_by_rating">By rating</string>
    <string name="sort_by_number_of_workmates">By workmates</string>
    <string name="sort_by_opening_hours">By opening</string>
    <string name="sort">sort</string>
    <string name="action_search">research</string>
    <string name="main_toolbar_title_hungry">I\'m hungry!</string>
    <string name="restaurant_choice">restaurant choice</string>
    <string name="main_toolbar_title_workmates">Available workmates</string>

    <string name="sort_reset" translatable="false">By default</string>
    <string name="notification_channel_id" translatable="false">notification channel id</string>
    <string name="notification_channel_title" translatable="false">notification channel title</string>
    <string name="notification_channel_description" translatable="false">notification channel description</string>

    <string name="toast_error_restaurant_chosen">You did not choose a restaurant</string>
    <string name="notification_text">"Here are the workmates who will eat with you : "</string>
    <string name="radius_of_research_meter">Radius of research (meter)</string>
    <string name="notification">Notification</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="alert_message_delete_account">You want to delete your account, are you sure ?</string>
    <string name="dialog_delete_account">Delete Account</string>
    <string name="title_call">&#160;Call</string>

</resources>