<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/restaurant_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_sort_by_distance"
                android:title="@string/sort_by_distance"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_sort_by_rating"
                android:title="@string/sort_by_rating"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_sort_by_workmates"
                android:title="@string/sort_by_number_of_workmates"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_sort_by_opening_hour"
                android:title="@string/sort_by_opening_hours"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_sort_reset"
                android:title="@string/sort_reset"
                app:showAsAction="never|withText" />
        </menu>
    </item>
</menu>