<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="anthony.brenon.go4lunch.ui.navigationbar.MapViewFragment"
        android:label="@string/menu_map_view"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="anthony.brenon.go4lunch.ui.navigationbar.ListViewFragment"
        android:label="@string/menu_list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="anthony.brenon.go4lunch.ui.navigationbar.WorkmatesFragment"
        android:label="@string/menu_workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>