<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsRestaurantActivity">

    <ImageView
        android:id="@+id/iv_details_restaurant"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_restaurant_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/restaurant_choice"
        android:src="@drawable/ic_restaurant_menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_details_restaurant" />

    <RelativeLayout
        android:id="@+id/app_bar_layout_details"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_details_restaurant" >

    <TextView
        android:id="@+id/tv_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_not_found"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

        <RatingBar
            android:id="@+id/restaurant_details_rating_bar"
            style="@android:style/Widget.Holo.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="#F7F33E"
            android:stepSize="0.5"
            android:layout_alignBottom="@+id/tv_details_name"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/tv_details_name"
            android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/tv_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="22dp"
        android:text="@string/address_not_found"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_button_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_details">

        <Button
            android:id="@+id/btn_call"
            style="@style/DetailButton"
            android:textColorHighlight="@color/white"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/call"
            app:icon="@drawable/ic_phone_enabled"
            app:iconGravity="top"/>

        <Button
            android:id="@+id/btn_like"
            style="@style/DetailButton"
            android:textColorHighlight="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/like"
            android:drawableTop="@drawable/ic_star_border"/>

        <Button
            android:id="@+id/btn_website"
            android:enabled="false"
            style="@style/DetailButton"
            android:textColorHighlight="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/website"
            app:icon="@drawable/ic_public"
            app:iconGravity="top" />

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_button_option" />



</androidx.constraintlayout.widget.ConstraintLayout>