<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_restaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/white"
    android:backgroundTint="#FFFFFF"
    android:paddingHorizontal="5dp">

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/name_not_found"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/address_not_found"
        app:layout_constraintBottom_toTopOf="@id/restaurant_opening"
        app:layout_constraintEnd_toStartOf="@+id/person_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name" />

    <TextView
        android:id="@+id/restaurant_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_image_not_supported"
        android:layout_marginVertical="2dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:text=""
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/person_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_outline"
        app:layout_constraintBottom_toTopOf="@id/restaurant_rating_bar"
        app:layout_constraintRight_toLeftOf="@id/restaurant_workmates"
        app:layout_constraintTop_toBottomOf="@id/restaurant_distance"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/restaurant_workmates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/workmates_by_default"
        app:layout_constraintBottom_toTopOf="@id/restaurant_rating_bar"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        app:layout_constraintTop_toBottomOf="@id/restaurant_distance" />


    <RatingBar
        android:id="@+id/restaurant_rating_bar"
        style="@android:style/Widget.Holo.Light.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="#F7F33E"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image" />

</androidx.constraintlayout.widget.ConstraintLayout>